--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -104,6 +104,16 @@
   box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
 }
 
+.dash-panel {
+  margin: 30px 0 0 0;
+  width: 720px;
+  padding: 30px 30px 30px 30px;
+  border: thick solid #222;
+  background: rgba(12, 12, 14, 0.85);
+  border-radius: 20px;
+  box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
+}
+
 .send-neo-wide {
   margin: 30px auto 10px;
   width: 900px;
@@ -746,3 +756,17 @@ margin: 0px;
 
 .token-soon {opacity: 0.3;}
 .container-fluid {overflow-x: hidden;}
+
+.dash-balance {
+  display: block;
+  color: #999;
+}
+
+.dash-portfolio h4 {
+  font-size: 16px;
+}
+
+.dash-hr {
+  margin: 5px auto 5px;
+  border-bottom: thin solid #333;
+}
