--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -785,3 +785,10 @@ margin: 0px;
   opacity: 1;
   cursor: pointer;
 }
+
+.col-5 {
+  width: 19%;
+  float: left;
+  margin: 0px;
+    padding: 0px 8px;
+}
