--- a/app/styles/_exchange.scss
+++ b/app/styles/_exchange.scss
@@ -7,4 +7,14 @@
     text-align: center;
     font-size: 36px;
   }
+  .trasactionId {
+    font-size: 16px;
+    // color: gray;
+  }
+}
+
+#payIn {
+  .form-control-exchange {
+    padding-left: 0;
+  }
 }
