--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -761,6 +761,10 @@ margin: 0px;
   display: block;
   color: #999;
 }
+.dash-price {
+  color: #777;
+  font-size: 1.1em;
+}
 
 .dash-portfolio h4 {
   font-size: 16px;
