--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -132,7 +132,7 @@
   padding: 8px 25px;
   font-size: 18px;
   background-color: rgba(0, 0, 0, 0.62);
-  border: 3px solid #252525;
+  border: 1px solid rgba(126, 211, 33, 0.33);
   border-radius: 9px;
   outline: none;
 }
@@ -145,7 +145,7 @@
   padding: 8px 25px;
   font-size: 18px;
   background-color: rgba(0, 0, 0, 0.62);
-  border: 3px solid #9013fe;
+  border: 1px solid rgba(144, 19, 254, 0.4);
   border-radius: 9px;
   outline: none;
 }
