--- a/app/styles/_buttons.scss
+++ b/app/styles/_buttons.scss
@@ -55,7 +55,7 @@
   padding: 7px 22px;
       height: 40px;
       font-size: 18px;
-      border: thin solid #52397b;
+      border: thin solid rgba(51, 51, 51, 0);
       cursor: pointer;
       text-align: center;
       border-radius: 5px;
