--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -718,6 +718,7 @@ cursor: pointer;
 .donations:hover {
   color: #555;
 }
+.left-10 {margin-left: 10px}
 .left-25 {margin-left: 25px}
 .left-45 {margin-left: 45px}
 .font-16 {font-size: 16px}
@@ -795,4 +796,18 @@ margin: 0px;
   float: left;
   margin: 0px;
     padding: 0px 8px;
+}
+
+.token-icon-border {
+  height: 40px;
+    width: 40px;
+    border-radius: 99px;
+    text-align: center;
+    margin: 10px auto;
+    padding: 2px;
+    border: 2px solid #fff;
+    color: #fff;
+    font-size: 22px;
+    background: rgba(0, 0, 0, 0.12);
+    cursor: pointer;
 }
