--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -76,7 +76,7 @@
   margin: 0;
   margin-left: 0;
   text-align: center;
-  max-width: 200px;
+  width: 100%;
 }
 
 .neo-logo {
@@ -488,6 +488,10 @@ max-width: 715px;
   margin-top: 130px;
 }
 
+.top-5 {
+  margin-top: 5px;
+}
+
 .top-10 {
   margin-top: 10px;
 }
@@ -773,7 +777,8 @@ margin: 0px;
 
 .dash-hr {
   margin: 5px auto 5px;
-  border-bottom: thin solid #333;
+  border-bottom: thin solid rgba(34, 34, 34, 0.79);
+  border-top: thin solid rgba(0, 0, 0, 0.9);
 }
 
 #ledger-copy-icon {
