--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -65,9 +65,11 @@
 }
 
 .logoContainer {
-  padding-left: 27%;
-  margin-top: 20%;
-  margin-bottom: 15%;
+  padding-left: 4%;
+  margin-top: 5%;
+  margin-bottom: 0;
+  position: fixed;
+  z-index: 9999;
 }
 
 #mainNav {
