--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -16,16 +16,16 @@
 
 .header {
   background-color: rgba(12, 12, 14, 0.85);
-  border: 1px solid #272727;
-  border-radius: 13px;
-  height: 105px;
-  margin-top: 2%;
-  padding: 10px;
-  width: 720px;
-  margin-left: 2%;
-  -moz-box-shadow:    inset 0 0 12px #000000;
-   -webkit-box-shadow: inset 0 0 12px #000000;
-   box-shadow:         inset 0 0 12px #000000;
+      border: 1px solid #272727;
+      border-radius: 20px;
+      height: 105px;
+      margin-top: 2%;
+      padding: 10px;
+      width: 720px;
+      margin-left: 2%;
+      -moz-box-shadow: inset 0 0 12px #000000;
+      -webkit-box-shadow: inset 0 0 12px #000000;
+      box-shadow: inset 0px 0px 12px #000000;
 }
 .neo-text {
   font-size: 36px;
@@ -106,12 +106,15 @@
 
 .dash-panel {
   margin: 30px 0 0 0;
-  width: 720px;
-  padding: 30px 30px 30px 30px;
-  border: thick solid #222;
-  background: rgba(12, 12, 14, 0.85);
-  border-radius: 20px;
-  box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
+      width: 720px;
+      padding: 30px 30px 30px 30px;
+      border: thin solid #222;
+      background: rgba(12, 12, 14, 0.85);
+      border-radius: 20px;
+      box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
+      -moz-box-shadow: inset 0 0 12px #000000;
+      -webkit-box-shadow: inset 0 0 12px #000000;
+      box-shadow: inset 0px 0px 12px #000000;
 }
 
 .send-neo-wide {
@@ -815,4 +818,16 @@ margin: 0px;
     font-size: 22px;
     background: rgba(0, 0, 0, 0.12);
     cursor: pointer;
+}
+
+.comb-bal {
+  display: block;
+  font-size: 11px;
+  color: #646464;
+}
+
+.bal-usd {
+  margin-left: 5px;
+  color: #646464;
+  font-size: 0.7em;
 }
