--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -482,9 +482,7 @@ max-width: 715px;
 
 .exch-logos {
   float: left;
-  margin-right: 15px;
-  margin-top: 7px;
-  padding-bottom: 10px;
+  margin: 10px 15px 10px 10px;
 }
 
 .top-130 {
