--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -65,11 +65,20 @@
 }
 
 .logoContainer {
-  padding-left: 4%;
+  padding-left: 5.25%;
   margin-top: 5%;
   margin-bottom: 0;
   position: fixed;
   z-index: 9999;
+}
+
+.logoContainer img {
+  cursor: pointer;
+    opacity: 0.7;
+}
+
+.logoContainer img:hover {
+  opacity: 1;
 }
 
 #mainNav {
