--- a/app/styles/_morpheus.scss
+++ b/app/styles/_morpheus.scss
@@ -2975,8 +2975,8 @@ a {
       font-weight: 200;
       text-align: center;
       border-radius: 12px;
-      margin-top: 70px;
-      padding: 40px 10px 10px;
+      margin-top: 128px;
+      padding: 0px 0px 10px 0px;
       font-size: 18px;
 }
 .comb-value {font-size: 18px;}
@@ -3136,7 +3136,7 @@ a {
   float: none;
 }
 .main-nav .navbar-collapse {
-  padding: 20px 0;
+  padding: 10px 0;
 }
 .main-nav .navbar ul {
   float: none;
