--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -65,20 +65,29 @@
 }
 
 .logoContainer {
-  padding-left: 5.25%;
-  margin-top: 5%;
-  margin-bottom: 0;
-  position: fixed;
-  z-index: 9999;
+  margin-left: 40px;
+margin-top: 3%;
+margin-bottom: 0;
+padding: 15px 3px;
+border-radius: 99px;
+position: fixed;
+z-index: 9999;
+background-color: rgba(12, 12, 14, 0.85);
+border: 1px solid #1d1d1d;
+-moz-box-shadow: inset 0 0 12px #000000;
+-webkit-box-shadow: inset 0 0 12px #000000;
+cursor: pointer;
+box-shadow: inset 0px 0px 12p;
 }
 
 .logoContainer img {
   cursor: pointer;
-    opacity: 0.7;
+    opacity: 0.85;
 }
 
 .logoContainer img:hover {
   opacity: 1;
+  cursor: pointer;
 }
 
 #mainNav {
