--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -783,6 +783,13 @@ margin: 0px;
   width: 80%;
 }
 
+.dash-hr-wide {
+  margin: 5px auto 5px;
+  border-bottom: 1px solid rgba(34, 34, 34, 0.79);
+  border-top: 2px solid rgba(0, 0, 0, 0.6);
+  width: 98%;
+}
+
 #ledger-copy-icon {
   font-size: 14px;
   margin-right: 5px;
