--- a/app/styles/_displayWalletkeys.scss
+++ b/app/styles/_displayWalletkeys.scss
@@ -146,22 +146,22 @@ input.pubicAddress {
 }
 
 .dash-icon-bar {
-  width: 100px;
-      float: left;
-      text-align: center;
-      font-size: 14px;
-      font-weight: 200;
-      margin: 0 10px 2px;
-      opacity: 0.3;
-      cursor: pointer;
-      color: #fff;
-      animation-duration: 1s;
-      animation-fill-mode: both;
+  max-width: 100px;
+  float: left;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 200;
+  margin: 0;
+  opacity: 0.3;
+  cursor: pointer;
+  color: #fff;
+  animation-duration: 1s;
+  animation-fill-mode: both;
 }
 
 .dash-icon-bar:hover {
   opacity: 0.6;
-  margin: -2px 10px 4px;
+  margin-top: -2px;
 }
 
 .new-address-bk {
