--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -135,7 +135,7 @@
   padding: 8px 25px;
   font-size: 18px;
   background-color: rgba(0, 0, 0, 0.62);
-  border: 1px solid rgba(126, 211, 33, 0.33);
+  border: 1px solid rgba(126, 211, 33, 0.6);
   border-radius: 9px;
   outline: none;
 }
@@ -148,7 +148,7 @@
   padding: 8px 25px;
   font-size: 18px;
   background-color: rgba(0, 0, 0, 0.62);
-  border: 1px solid rgba(144, 19, 254, 0.4);
+  border: 1px solid rgba(144, 19, 254, 0.6);
   border-radius: 9px;
   outline: none;
 }
@@ -179,7 +179,7 @@ h2 {
 .amount-dollar {
   position: absolute;
   left: 28px;
-  top: 16px;
+  top: 14px;
   font-size: 18px;
   z-index: 99;
 }
@@ -396,7 +396,7 @@ background: url("../img/progress-bar1.png") no-repeat center;
 width: 500px;
 height: 17px;
 position: absolute;
-top: 25%;
+top: 23%;
 left: 35%;
 border: none;
   box-shadow: none;
@@ -472,7 +472,7 @@ border: none;
 .prog-info {
 position: absolute;
 left: 26%;
-top: 26%;
+top: 24%;
 max-width: 715px;
 }
 
@@ -487,6 +487,10 @@ max-width: 715px;
 
 .top-130 {
   margin-top: 130px;
+}
+
+.top-100 {
+  margin-top: 100px;
 }
 
 .top-5 {
@@ -836,4 +840,14 @@ margin: 0px;
   margin-left: 5px;
   color: #646464;
   font-size: 0.7em;
+}
+
+.settings-padding {
+  width: 98%;
+  margin: 20px auto 0;
+}
+
+.block {
+  display: block;
+  clear: both;
 }
