--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -66,18 +66,18 @@
 
 .logoContainer {
   margin-left: 40px;
-margin-top: 3%;
-margin-bottom: 0;
-padding: 15px 3px;
-border-radius: 99px;
-position: fixed;
-z-index: 9999;
-background-color: rgba(12, 12, 14, 0.85);
-border: 1px solid #1d1d1d;
--moz-box-shadow: inset 0 0 12px #000000;
--webkit-box-shadow: inset 0 0 12px #000000;
-cursor: pointer;
-box-shadow: inset 0px 0px 12p;
+    margin-top: 3%;
+    margin-bottom: 0;
+    padding: 15px 3px;
+    border-radius: 99px;
+    position: fixed;
+    z-index: 9999;
+    background-color: rgba(63, 37, 158, 0.39);
+    border: 1px solid rgba(73, 54, 178, 0.3);
+    -moz-box-shadow: inset 0 0 12px #000000;
+    -webkit-box-shadow: inset 0 0 17px rgba(14, 14, 16, 0.74);
+    box-shadow: inset 0 0 17px rgba(14, 14, 16, 0.74);
+    cursor: pointer;
 }
 
 .logoContainer img {
