--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -108,7 +108,7 @@
   margin: 30px 0 0 0;
       width: 720px;
       padding: 30px 30px 30px 30px;
-      border: thin solid #222;
+      border: 3px solid #1d1b1d;
       background: rgba(12, 12, 14, 0.85);
       border-radius: 20px;
       box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
