--- a/app/styles/_displayWalletkeys.scss
+++ b/app/styles/_displayWalletkeys.scss
@@ -152,6 +152,7 @@ input.pubicAddress {
   font-size: 14px;
   font-weight: 200;
   margin: 0;
+  padding: 2px;
   opacity: 0.3;
   cursor: pointer;
   color: #fff;
