--- a/app/styles/_morpheus.scss
+++ b/app/styles/_morpheus.scss
@@ -135,7 +135,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: Arial;
+  font-family: "Lato";
   font-size: 13px;
   line-height: 1.6;
   font-weight: 200;
