--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,7 +39,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-family: Arial;
+  font-family: "Lato";
   background-color: #000;
   color: #ffffff;
   margin: 0px;
