--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -104,3 +104,10 @@
     background-image: url("../img/dashIcon@3x.png");
   }
 }
+
+.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:active, .navbar-inverse .navbar-nav>li>a:hover {
+  color: #fff;
+      background-color: transparent;
+      opacity: 1;
+      font-weight: 900;
+}
