--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -35,7 +35,9 @@
   line-height: 1.2em;
   span {
     color: #7ed321;
-    font-size: 0.8em;
+font-weight: 900;
+font-size: 0.6em;
+line-height: 0.6em;
   }
 }
   .neo-text-ledger {
@@ -66,6 +68,8 @@
   margin: 2px;
   span {
     color: #9013fe;
+    font-weight: 900;
+    font-size: 0.8em;
   }
 }
 
@@ -841,6 +845,7 @@ margin: 0px;
   margin-left: 5px;
   color: #646464;
   font-size: 0.7em;
+  font-weight: 900;
 }
 
 .settings-padding {
