--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -709,6 +709,8 @@ animation: jump 1.5s ease 1s 1 normal ;
 
 .support-qs {
   cursor: pointer;
+  font-size: 12px;
+    letter-spacing: 0.02em;
 }
 
 .support-qs:hover {
