--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -40,6 +40,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
   font-family: "Lato";
+  font-weight: 400;
   background-color: #000;
   color: #ffffff;
   margin: 0px;
