--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,7 +39,8 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-family: Arial;
+  font-family: "Lato";
+  font-weight: 400;
   background-color: #000;
   color: #ffffff;
   margin: 0px;
