--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -65,20 +65,29 @@
 }
 
 .logoContainer {
-  padding-left: 5.25%;
-  margin-top: 5%;
-  margin-bottom: 0;
-  position: fixed;
-  z-index: 9999;
+  margin-left: 40px;
+    margin-top: 3%;
+    margin-bottom: 0;
+    padding: 15px 3px;
+    border-radius: 99px;
+    position: fixed;
+    z-index: 9999;
+    background-color: rgba(63, 37, 158, 0.39);
+    border: 1px solid rgba(73, 54, 178, 0.3);
+    -moz-box-shadow: inset 0 0 12px #000000;
+    -webkit-box-shadow: inset 0 0 17px rgba(14, 14, 16, 0.74);
+    box-shadow: inset 0 0 17px rgba(14, 14, 16, 0.74);
+    cursor: pointer;
 }
 
 .logoContainer img {
   cursor: pointer;
-    opacity: 0.7;
+    opacity: 0.85;
 }
 
 .logoContainer img:hover {
   opacity: 1;
+  cursor: pointer;
 }
 
 #mainNav {
@@ -94,4 +103,11 @@
     background-size: cover;
     background-image: url("../img/dashIcon@3x.png");
   }
+}
+
+.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:active, .navbar-inverse .navbar-nav>li>a:hover {
+  color: #fff;
+      background-color: transparent;
+      opacity: 1;
+      font-weight: 900;
 }
