--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -35,6 +35,9 @@
   line-height: 1.2em;
   span {
     color: #7ed321;
+    font-weight: 900;
+    font-size: 0.6em;
+    line-height: 0.6em;
   }
 }
 .neo-text-ledger {
@@ -65,6 +68,8 @@
   margin: 2px;
   span {
     color: #9013fe;
+    font-weight: 900;
+    font-size: 0.8em;
   }
 }
 
@@ -107,7 +112,7 @@
   margin: 30px 0 0 0;
   width: 720px;
   padding: 30px 30px 30px 30px;
-  border: thin solid #222;
+  border: 3px solid #1d1b1d;
   background: rgba(12, 12, 14, 0.85);
   border-radius: 20px;
   box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
@@ -134,7 +139,7 @@
   padding: 8px 25px;
   font-size: 18px;
   background-color: rgba(0, 0, 0, 0.62);
-  border: 1px solid rgba(126, 211, 33, 0.33);
+  border: 1px solid rgba(126, 211, 33, 0.6);
   border-radius: 9px;
   outline: none;
 }
@@ -147,7 +152,7 @@
   padding: 8px 25px;
   font-size: 18px;
   background-color: rgba(0, 0, 0, 0.62);
-  border: 1px solid rgba(144, 19, 254, 0.4);
+  border: 1px solid rgba(144, 19, 254, 0.6);
   border-radius: 9px;
   outline: none;
 }
@@ -178,7 +183,7 @@ h2 {
 .amount-dollar {
   position: absolute;
   left: 28px;
-  top: 16px;
+  top: 14px;
   font-size: 18px;
   z-index: 99;
 }
@@ -395,7 +400,7 @@ webview {
   width: 500px;
   height: 17px;
   position: absolute;
-  top: 25%;
+  top: 23%;
   left: 35%;
   border: none;
   box-shadow: none;
@@ -487,7 +492,7 @@ webview {
 .prog-info {
   position: absolute;
   left: 26%;
-  top: 26%;
+  top: 24%;
   max-width: 715px;
 }
 
@@ -502,6 +507,10 @@ webview {
 
 .top-130 {
   margin-top: 130px;
+}
+
+.top-100 {
+  margin-top: 100px;
 }
 
 .top-5 {
@@ -712,6 +721,8 @@ webview {
 
 .support-qs {
   cursor: pointer;
+  font-size: 12px;
+  letter-spacing: 0.02em;
 }
 
 .support-qs:hover {
@@ -735,9 +746,6 @@ webview {
 .donations:hover {
   color: #555;
 }
-.left-10 {
-  margin-left: 10px;
-}
 .left-25 {
   margin-left: 25px;
 }
@@ -754,10 +762,7 @@ webview {
 .tokens:hover {
   opacity: 1;
 }
-.tokens-window {
-  height: 320px;
-  overflow-y: auto;
-}
+
 .add-token {
   font-size: 12px;
   text-align: center;
@@ -811,8 +816,16 @@ webview {
 
 .dash-hr {
   margin: 5px auto 5px;
-  border-bottom: thin solid rgba(34, 34, 34, 0.79);
-  border-top: thin solid rgba(0, 0, 0, 0.9);
+  border-bottom: 1px solid rgba(34, 34, 34, 0.79);
+  border-top: 2px solid rgba(0, 0, 0, 0.6);
+  width: 80%;
+}
+
+.dash-hr-wide {
+  margin: 5px auto 5px;
+  border-bottom: 1px solid rgba(34, 34, 34, 0.79);
+  border-top: 2px solid rgba(0, 0, 0, 0.6);
+  width: 98%;
 }
 
 #ledger-copy-icon {
@@ -861,4 +874,15 @@ webview {
   margin-left: 5px;
   color: #646464;
   font-size: 0.7em;
+  font-weight: 900;
+}
+
+.settings-padding {
+  width: 98%;
+  margin: 20px auto 0;
+}
+
+.block {
+  display: block;
+  clear: both;
 }
