--- a/app/styles/_morpheus.scss
+++ b/app/styles/_morpheus.scss
@@ -162,7 +162,7 @@ h6 {
   margin-top: 20px;
   margin-bottom: 10px;
   font-weight: 500;
-  white-space: nowrap;
+  white-space: normal;
   overflow: hidden;
   text-overflow: ellipsis;
 }
