--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -672,15 +672,17 @@ webview {
 
 .ledger-address {
   display: inline-block;
-  width: 100%;
-  text-align: left;
-  min-height: 25px;
-  padding: 8px 25px;
-  font-size: 17px;
-  background-color: rgba(0, 0, 0, 0.62);
-  border: 3px solid #252525;
-  border-radius: 9px;
-  outline: none;
+      width: 100%;
+      text-align: left;
+      min-height: 25px;
+      font-weight: 200;
+      letter-spacing: 0.025em;
+      padding: 8px 16px;
+      font-size: 16px;
+      background-color: rgba(0, 0, 0, 0.62);
+      border: 3px solid #252525;
+      border-radius: 9px;
+      outline: none;
 }
 
 .marg-right-5 {
