--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -657,8 +657,8 @@ webview {
 
 .ledger-logo {
   float: left;
-  width: 36px;
-  margin: 7px 20px 0px 15px;
+  width: 22px;
+  margin: 12px 20px 0px 15px;
 }
 
 .ledgerQRBox {
@@ -853,15 +853,15 @@ webview {
 }
 
 .token-icon-border {
-  height: 40px;
-  width: 40px;
+  height: 32px;
+  width: 32px;
   border-radius: 99px;
   text-align: center;
   margin: 10px auto;
   padding: 2px;
   border: 2px solid #fff;
   color: #fff;
-  font-size: 22px;
+  font-size: 15px;
   background: rgba(0, 0, 0, 0.12);
   cursor: pointer;
 }
@@ -891,8 +891,10 @@ webview {
 
 .tokens-window {
   height: 360px;
-  overflow-y: auto;
-  overflow-x: hidden;
+      overflow-y: auto;
+      overflow-x: hidden;
+      font-size: 12px;
+      color: #999;
 }
 
 .lineheight-up {
