--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -901,19 +901,68 @@ webview {
   line-height: 1.6em;
 }
 
-.loader {
-    border: 12px solid #131213; /* Dark grey */
-    border-top: 12px solid #7097e3; /* Purp */
-    border-right: 12px solid #7055e3;
-    border-bottom: 12px solid #231847;
+#preloader {
+    width: 100%;
+    height: 100%;
+}
+#loader {
+    display: block;
+    width: 80px;
+    height: 80px;
+    margin: 0px auto 10px;
     border-radius: 50%;
-    width: 56px;
-    height: 56px;
-    margin: 10px auto 20px;
+    border: 3px solid transparent;
+    border-top-color: #70a2e3;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+#loader:before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #7056e3;
+    -webkit-animation: spin 3s linear infinite;
+    animation: spin 3s linear infinite;
+}
+#loader:after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #80b7ff;
+    -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
 }
-
+@-webkit-keyframes spin {
+    0%   {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0%   {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
