--- a/app/styles/_buttons.scss
+++ b/app/styles/_buttons.scss
@@ -257,6 +257,15 @@
   margin-top: 3px;
 }
 
+.ledger-sm {
+  width: 24px;
+  height: 24px;
+  background-image: url("../img/ledger-sm.png");
+  margin: 0px auto;
+  cursor: pointer;
+  margin-top: 3px;
+}
+
 .fadeInLeft {
   -webkit-animation-name: fadeInLeft;
   animation-name: fadeInLeft;
