--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -905,6 +905,11 @@ webview {
     width: 100%;
     height: 100%;
 }
+
+#gas-preloader {
+    width: 100%;
+    height: 100%;
+}
 #loader {
     display: block;
     width: 80px;
@@ -916,6 +921,50 @@ webview {
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
+
+#gas-loader {
+  display: block;
+  position: fixed;
+  z-index: 0;
+  top: 26px;
+  left: 546px;
+  width: 123px;
+  height: 123px;
+  margin: 0px auto 10px;
+  border-radius: 50%;
+  border: 7px solid rgba(0,0,0,.5);
+  border-top-color: #7054e3;
+  -webkit-animation: spin 4s linear infinite;
+  animation: spin 4s linear infinite;
+}
+#gas-loader:before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: transparent;
+    -webkit-animation: spin 3s linear infinite;
+    animation: spin 3s linear infinite;
+}
+
+#gas-loader:after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: transparent;
+    -webkit-animation: spin 1.5s linear infinite;
+    animation: spin 1.5s linear infinite;
+}
+
 #loader:before {
     content: "";
     position: absolute;
@@ -929,6 +978,7 @@ webview {
     -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
 }
+
 #loader:after {
     content: "";
     position: absolute;
