--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -16,16 +16,16 @@
 
 .header {
   background-color: rgba(12, 12, 14, 0.85);
-  border: 1px solid #272727;
-  border-radius: 20px;
-  height: 105px;
-  margin-top: 2%;
-  padding: 10px;
-  width: 720px;
-  margin-left: 2%;
-  -moz-box-shadow: inset 0 0 12px #000000;
-  -webkit-box-shadow: inset 0 0 12px #000000;
-  box-shadow: inset 0px 0px 12px #000000;
+      border: 1px solid #272727;
+      border-radius: 20px;
+      height: 113px;
+      margin-top: 1%;
+      padding: 10px;
+      width: 720px;
+      margin-left: 2%;
+      -moz-box-shadow: inset 0 0 12px #000000;
+      -webkit-box-shadow: inset 0 0 12px #000000;
+      box-shadow: inset 0px 0px 12px #000000;
 }
 .neo-text {
   font-size: 36px;
@@ -1015,4 +1015,11 @@ webview {
         -ms-transform: rotate(360deg);
         transform: rotate(360deg);
     }
+}
+
+.market-price {
+  color: #646464;
+font-size: 10px;
+padding: 0px;
+margin: 0px;
 }
