--- a/app/styles/_displayWalletkeys.scss
+++ b/app/styles/_displayWalletkeys.scss
@@ -195,3 +195,15 @@ body{width:100%;
     display: none;
     }
 }
+
+
+.form-control {
+  color: #ccc;
+}
+
+.wallet-logo {
+  float: left;
+margin-right: 14px;
+margin-bottom: 10px;
+margin-top: -5px;
+}
