--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -18,8 +18,8 @@
   background-color: rgba(12, 12, 14, 0.85);
       border: 1px solid #272727;
       border-radius: 20px;
-      height: 113px;
-      margin-top: 1%;
+      height: 112px;
+      margin-top: 2%;
       padding: 10px;
       width: 720px;
       margin-left: 2%;
@@ -121,8 +121,21 @@
   box-shadow: inset 0px 0px 12px #000000;
 }
 
+.dash-chart-panel {
+  margin: 10px 0 0 0;
+width: 720px;
+padding: 30px 30px 30px 30px;
+border: 3px solid #1d1b1d;
+background: rgba(12, 12, 14, 0.85);
+border-radius: 20px;
+box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
+-moz-box-shadow: inset 0 0 12px #000000;
+-webkit-box-shadow: inset 0 0 12px #000000;
+box-shadow: inset 0px 0px 12px #000000;
+}
+
 .send-neo-wide {
-  margin: 30px auto 10px;
+  margin: 50px auto 10px;
   width: 900px;
   padding: 0px 30px 30px 30px;
   border: thick solid #222;
@@ -741,12 +754,12 @@ webview {
 .donations {
   position: fixed;
   bottom: 5px;
-  right: 25%;
+  right: 21%;
   cursor: pointer;
 }
 
 .donations:hover {
-  color: #555;
+  color: #6a46bb;
 }
 .left-25 {
   margin-left: 25px;
@@ -784,7 +797,7 @@ webview {
 
 .social-bar li {
   float: left;
-  width: 25%;
+  width: 30%;
   text-align: left;
   opacity: 0.4;
   padding: 0px;
@@ -846,10 +859,41 @@ webview {
 }
 
 .col-5 {
-  width: 19%;
-  float: left;
-  margin: 0px;
-  padding: 0px 8px;
+  width: 130px;
+      float: left;
+      max-height: 100px;
+      margin: 10px;
+      padding: 16px 8px;
+      font-size: 0.8em;
+      border: 3px solid #1d1b1d;
+      background: rgba(12, 12, 14, 0.85);
+      border-radius: 20px;
+      box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
+      -moz-box-shadow: inset 0 0 12px #000000;
+      -webkit-box-shadow: inset 0 0 12px #000000;
+      box-shadow: inset 0px 0px 12px #000000;
+      opacity: 0.9;
+cursor: pointer;
+}
+
+.col-5:hover {
+  border: 3px solid #272627;
+  opacity: 1;
+}
+
+.col-5 h2 {
+  margin: 8px;
+  color: #353535;
+  opacity: 0.6;
+}
+
+.col-5:hover h2 {
+  opacity: 1;
+}
+
+.dotted {
+  border-style: dashed;
+  opacity: 0.6;
 }
 
 .token-icon-border {
@@ -1023,3 +1067,54 @@ font-size: 10px;
 padding: 0px;
 margin: 0px;
 }
+
+
+.dash-portfolio h3 {
+  font-size: 18px;
+      margin: 0px;
+      font-weight: 200;
+      word-wrap: break-word;
+      overflow: visible;
+}
+
+.market-window {
+  height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    font-size: 13px;
+    color: #999;
+}
+
+.market-button {
+  font-size: 10px;
+      background: #333;
+      color: #999;
+      border: 1px solid #404040;
+      border-radius: 3px;
+}
+
+.market h3 {
+  margin: 0px;
+}
+
+.market-bar {
+  padding: 0px;
+}
+
+.market-bar li {
+  width: 32%;
+      float: left;
+      background: #1b1b1b;
+      border: 1px solid #272727;
+      border-radius: 2px;
+      margin: 1px;
+      text-align: center;
+      padding: 3px;
+}
+
+.rpx-price {color:#980300; font-size: 0.6em; font-weight: 900;}
+.dbc-price {color:#3e9bf4; font-size: 0.6em; font-weight: 900;}
+.qlink-price {color:#6a0182; font-size: 0.6em; font-weight: 900;}
+.nex-price {color:#003fff; font-size: 0.6em; font-weight: 900;}
+.hp-price {color:#ffa6b6; font-size: 0.6em; font-weight: 900;}
+.rec-h3 {margin: 10px 0px 10px 50px;}
