--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -27,6 +27,19 @@
       -webkit-box-shadow: inset 0 0 12px #000000;
       box-shadow: inset 0px 0px 12px #000000;
 }
+
+.ledger-header {
+  background-color: rgba(12, 12, 14, 0.85);
+      border: 1px solid #272727;
+      border-radius: 20px;
+      height: 112px;
+      margin: 30px auto 0px;
+      padding: 10px;
+      width: 720px;
+      -moz-box-shadow: inset 0 0 12px #000000;
+      -webkit-box-shadow: inset 0 0 12px #000000;
+      box-shadow: inset 0px 0px 12px #000000;
+}
 .neo-text {
   font-size: 36px;
   font-weight: 200;
@@ -121,6 +134,19 @@
   box-shadow: inset 0px 0px 12px #000000;
 }
 
+.ledger-login-panel {
+  margin: 30px auto 0px;
+  width: 720px;
+  padding: 30px 30px 30px 30px;
+  border: 3px solid #1d1b1d;
+  background: rgba(12, 12, 14, 0.85);
+  border-radius: 20px;
+  box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
+  -moz-box-shadow: inset 0 0 12px #000000;
+  -webkit-box-shadow: inset 0 0 12px #000000;
+  box-shadow: inset 0px 0px 12px #000000;
+}
+
 .dash-chart-panel {
   margin: 10px 0 0 0;
 width: 720px;
@@ -201,9 +227,10 @@ h2 {
 }
 
 .send-notice {
-  margin-top: 30px;
+  margin: 30px auto 0px;
   color: #646464;
   text-align: center;
+  max-width: 640px;
 }
 
 .amount-dollar {
