--- a/app/styles/_dashboard.scss
+++ b/app/styles/_dashboard.scss
@@ -155,3 +155,25 @@ text-align: center;
     transform: scale3d(1, 1, 1);
   }
 }
+
+.ledger-login-controls {
+  position: fixed;
+top: 162px;
+left: 15%;
+width: 700px;
+font-size: 12px;
+}
+
+.ledger-icons {
+  height: 38px;
+width: 38px;
+border-radius: 99px;
+text-align: center;
+margin: 10px auto;
+padding: 5px;
+border: 2px solid #fff;
+color: #fff;
+font-size: 16px;
+background: rgba(0, 0, 0, 0.12);
+cursor: pointer;
+}
