--- a/app/styles/_dashboard.scss
+++ b/app/styles/_dashboard.scss
@@ -158,10 +158,12 @@ text-align: center;
 
 .ledger-login-controls {
   position: fixed;
-top: 162px;
-left: 15%;
-width: 700px;
-font-size: 12px;
+      top: 162px;
+      left: 15%;
+      width: 700px;
+      height: 100px;
+      font-size: 12px;
+      overflow: visible;
 }
 
 .ledger-icons {
