--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1161,7 +1161,7 @@ margin: 0px;
 
 .rpx-price {color:#980300; font-size: 0.8em; font-weight: 900;}
 .dbc-price {color:#3e9bf4; font-size: 0.8em; font-weight: 900;}
-.qlink-price {color:#6a0182; font-size: 0.8em; font-weight: 900;}
+.qlink-price {color:#ae00d6; font-size: 0.8em; font-weight: 900;}
 .nex-price {color:#003fff; font-size: 0.8em; font-weight: 900;}
 .hp-price {color:#ffa6b6; font-size: 0.8em; font-weight: 900;}
 .rec-h3 {margin: 10px 0px 10px 50px;}
