asset-windows-prices

--- a/app/styles/_buttons.scss
+++ b/app/styles/_buttons.scss
@@ -444,7 +444,7 @@
   background: #337ab7;
 }
 
-.qlk-button {
+.qlc-button {
   padding: 6px 16px;
       height: 42px;
       font-size: 18px;
@@ -460,7 +460,7 @@
       width: 100%;
 }
 
-.qlk-button:hover {
+.qlc-button:hover {
   border: 0px solid #ae00d6;
   color: #fff;
   background: #ae00d6;
