ledger-login-sidebar
remoed icons, used sidebar links for better layout/UX

--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1211,3 +1211,11 @@ margin: 0px;
 .nex-price {color:#003fff; font-size: 0.8em; font-weight: 900;}
 .hp-price {color:#ffa6b6; font-size: 0.8em; font-weight: 900;}
 .rec-h3 {margin: 10px 0px 10px 50px;}
+
+.ledger-dash-layout {
+width: 840px;
+position: absolute;
+right: 0;
+top: 0;
+overflow: hidden;
+}
