--- a/app/styles/_receive.scss
+++ b/app/styles/_receive.scss
@@ -49,3 +49,8 @@
 
   .copy-icon:hover,.print-icon:hover,.email-icon:hover,.link-icon:hover {opacity: 1; cursor: pointer;}
 }
+
+.neo-qr {
+  width: 100%;
+  height: 100%;
+}
