--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -66,7 +66,7 @@
 
 .logoContainer {
   margin-left: 47px;
-  margin-top: 3%;
+  margin-top: 35px;
   margin-bottom: 0;
   padding: 13px 0px;
   border-radius: 99px;
@@ -78,6 +78,13 @@
   -webkit-box-shadow: inset 0 0 17px rgba(14, 14, 16, 0.74);
   box-shadow: inset 0 0 17px rgba(14, 14, 16, 0.74);
   cursor: pointer;
+}
+
+.main-container {
+  margin-left: 235px;
+  width: auto;
+  margin-top: 35px;
+  margin-right: 55px;
 }
 
 .logoContainer img {
