--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1,5 +1,5 @@
 #send {
-  width: 720px;
+  width: auto;
 }
 
 .right {
@@ -18,11 +18,10 @@
   background-color: rgba(12, 12, 14, 0.85);
       border: 1px solid #272727;
       border-radius: 20px;
-      height: 112px;
+      height: 120px;
       margin-top: 2%;
       padding: 10px;
-      width: 720px;
-      margin-left: 2%;
+      width: auto;
       -moz-box-shadow: inset 0 0 12px #000000;
       -webkit-box-shadow: inset 0 0 12px #000000;
       box-shadow: inset 0px 0px 12px #000000;
@@ -113,7 +112,7 @@
 
 .settings-panel {
   margin: 50px 0 0 0;
-  width: 720px;
+  width: auto;
   padding: 30px 30px 30px 30px;
   border: thick solid #222;
   background: rgba(12, 12, 14, 0.85);
@@ -123,7 +122,8 @@
 
 .dash-panel {
   margin: 30px 0 0 0;
-  width: 720px;
+  width: auto;
+  min-height: 500px;
   padding: 30px 30px 30px 30px;
   border: 3px solid #1d1b1d;
   background: rgba(12, 12, 14, 0.85);
@@ -136,7 +136,7 @@
 
 .ledger-login-panel {
   margin: 30px auto 0px;
-  width: 720px;
+  width: auto;
   padding: 30px 30px 30px 30px;
   border: 3px solid #1d1b1d;
   background: rgba(12, 12, 14, 0.85);
@@ -149,7 +149,7 @@
 
 .dash-chart-panel {
   margin: 10px 0 0 0;
-width: 720px;
+width: auto;
 padding: 30px 30px 30px 30px;
 border: 3px solid #1d1b1d;
 background: rgba(12, 12, 14, 0.85);
@@ -316,7 +316,7 @@ h2 {
 
 #transactionList {
   list-style-type: none;
-  height: 300px;
+  height: 360px;
   width: 100%;
   -webkit-padding-start: 0px;
   overflow-y: auto;
@@ -916,7 +916,9 @@ webview {
 }
 
 .dash-portfolio {
-  margin: 10px 10px 10px 0px;
+  padding: 0px 7px;
+  clear: both;
+  display: block;
 }
 
 .asset-portfolio {
@@ -960,11 +962,11 @@ webview {
 }
 
 .col-5 {
-  width: 135px;
+  width: 18%;
   float: left;
-  height: 95px;
+  height: 110px;
   color: #9d9d9d;
-  margin: 10px 10px 10px 0px;
+  margin: 1%;
   padding: 15px 2px;
   font-size: 0.8em;
   border: 3px solid #1d1b1d;
@@ -1003,21 +1005,21 @@ webview {
 
 
 .col-2 {
-  width: 350px;
-    float: left;
-    height: 260px;
-    color: #9d9d9d;
-    margin: 0px 0px 0px 16px;
-    padding: 20px 30px;
-    font-size: 1.1em;
-    border: 3px solid #1d1b1d;
-    background: rgba(12, 12, 14, 0.85);
-    border-radius: 20px;
-    box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
-    -moz-box-shadow: inset 0 0 12px #000000;
-    -webkit-box-shadow: inset 0 0 12px #000000;
-    box-shadow: inset 0px 0px 12px #000000;
-    cursor: pointer;
+  width: 46%;
+  float: left;
+  height: 260px;
+  color: #9d9d9d;
+  margin: 10px 2%;
+  padding: 20px 30px;
+  font-size: 1.1em;
+  border: 3px solid #1d1b1d;
+  background: rgba(12, 12, 14, 0.85);
+  border-radius: 20px;
+  box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
+  -moz-box-shadow: inset 0 0 12px #000000;
+  -webkit-box-shadow: inset 0 0 12px #000000;
+  box-shadow: inset 0px 0px 12px #000000;
+  cursor: pointer;
 }
 
 .col-2:hover {
@@ -1191,15 +1193,15 @@ webview {
 
 .market-price {
   color: #7b7b7b;
-font-size: 10px;
+font-size: 12px;
 padding: 0px;
 margin: 0px;
 }
 
 
 .dash-portfolio h3 {
-  font-size: 14px;
-  margin: 0px;
+  font-size: 16px;
+  margin: 6px 0px;
   font-weight: 200;
   word-wrap: break-word;
   overflow: visible;
