--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -571,7 +571,7 @@ $box-margin: 10px;
   border: 10px solid #d3d3d3;
   background-color: white;
   border-radius: 30px;
-  padding: 20px;
+  padding: 10%;
   width: 100%;
   margin: 0px auto;
 }
@@ -581,8 +581,8 @@ $box-margin: 10px;
 }
 
 .container {
-  max-width: 790px;
-  width: 790px;
+  max-width: 800px;
+  width: 800px;
 }
 
 .spinner {
