--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1257,6 +1257,13 @@ margin: 0px;
 .qlink-price {color:#ae00d6; font-size: 0.8em; font-weight: 900;}
 .nex-price {color:#003fff; font-size: 0.8em; font-weight: 900;}
 .hp-price {color:#ffa6b6; font-size: 0.8em; font-weight: 900;}
+.btc-price {color:gold; font-size: 0.8em; font-weight: 900;}
+.ltc-price {color:silver; font-size: 0.8em; font-weight: 900;}
+.eth-price {color:grey; font-size: 0.8em; font-weight: 900;}
+.lrc-price {color:#646464; font-size: 0.8em; font-weight: 900;}
+.xmr-price {color:orange; font-size: 0.8em; font-weight: 900;}
+.iota-price {color:grey; font-size: 0.8em; font-weight: 900;}
+
 .rec-h3 {margin: 10px 0px 10px 50px;}
 
 .ledger-dash-layout {
