--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1431,3 +1431,11 @@ figure {
   clip: rect(0,0,0,0);
   border: 0;
 }
+
+
+.login-copyright {
+  position: fixed;
+    bottom: 2%;
+    left: 42%;
+    color: #3a3a3a;
+}
