Shape Shift Screen
Shapeshift exchange screen

--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -486,6 +486,14 @@ webview {
   margin-top: -8px;
 }
 
+.shapeshift-logo-sm {
+  background: url("../img/shapeshift-sm.png") no-repeat center;
+  width: 100px;
+  height: 34px;
+  opacity: 0.6;
+  margin-top: -8px;
+}
+
 .progress-bar {
   background: url("../img/progress-bar1.png") no-repeat center;
   width: 500px;
