--- a/app/styles/_forms.scss
+++ b/app/styles/_forms.scss
@@ -63,16 +63,17 @@
 
 .form-control-exchange {
   display: inline-block;
-  width: 100%;
-  min-height: 25px;
-  padding: 8px 25px;
-  font-size: 19px;
-  background-color: #000;
-  border: 3px solid #222;
-  border-radius: 9px;
-  outline: none;
-  height: 48px;
-  margin-bottom: 10px;
+      width: 100%;
+      min-height: 25px;
+      padding: 6px 25px;
+      font-size: 19px;
+      background-color: #222;
+      border: 2px solid #464646;
+      color: #f5f5f5;
+      border-radius: 9px;
+      outline: none;
+      height: auto;
+      margin-bottom: 10px;
 }
 
 .form-control-gas {
