small layout updates to BTC pages

--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -100,6 +100,11 @@
   margin: 0 10px 10px 0;
 }
 
+.btc-logo {
+  float: left;
+  margin: 15px 10px 0px 0px;
+}
+
 .send-neo {
   margin: 50px auto 0;
   width: 720px;
