--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1076,6 +1076,25 @@ webview {
   border: 3px solid #272627;
 }
 
+.col-3 {
+      width: 31%;
+      float: left;
+      height: 125px;
+      color: #9d9d9d;
+      margin: 1%;
+      padding: 15px 2px;
+      font-size: 0.8em;
+      border: 3px solid #1d1b1d;
+      background: rgba(12, 12, 14, 0.85);
+      border-radius: 20px;
+      box-shadow: 0px 10px 44px rgba(0, 0, 0, 0.45);
+      -moz-box-shadow: inset 0 0 12px #000000;
+      -webkit-box-shadow: inset 0 0 12px #000000;
+      box-shadow: inset 0px 0px 12px #000000;
+      cursor: pointer;
+      -webkit-app-region: no-drag;
+}
+
 .dotted {
   border-style: dashed;
   opacity: 0.6;
@@ -1511,4 +1530,41 @@ figure {
   float: left;
   padding-left: 20px;
   max-width: 200px;
+}
+
+.menu-accord {
+  margin: 0px 0px 0px 0px;
+  padding: 10px;
+  height: 100px;
+}
+
+.menu-accord-li {
+  margin: 15px 0px 10px 0px;
+}
+
+.menu-accord-item {
+  cursor: pointer;
+  margin: 10px 0px 10px 58px;
+  font-size: 16px;
+  color: #999;
+}
+
+.menu-accord-item:hover {
+  color: #fff;
+}
+
+.float-left {
+  float: left;
+}
+
+.margin-10 {
+  margin: 10px 0px 0px 10px;
+  clear: both;
+  display: block;
+  min-height: 32px;
+}
+
+a:focus, a:hover, a:active {
+  color: #fff;
+  text-decoration: none;
 }
