--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1077,11 +1077,11 @@ webview {
 }
 
 .col-3 {
-      width: 31%;
+  width: 32%;
       float: left;
-      height: 125px;
+      height: 110px;
       color: #9d9d9d;
-      margin: 1%;
+      margin: .5%;
       padding: 15px 2px;
       font-size: 0.8em;
       border: 3px solid #1d1b1d;
