Asset Portfolio asset prices

--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1081,7 +1081,7 @@ webview {
       float: left;
       height: 110px;
       color: #9d9d9d;
-      margin: .5%;
+      margin: 1% .5%;
       padding: 15px 2px;
       font-size: 0.8em;
       border: 3px solid #1d1b1d;
@@ -1168,8 +1168,8 @@ webview {
   height: 360px;
       overflow-y: auto;
       overflow-x: hidden;
-      font-size: 12px;
-      color: #999;
+      font-size: 15px;
+      color: #777;
 }
 
 .lineheight-up {
@@ -1578,4 +1578,27 @@ a:focus, a:hover, a:active {
 .port-price-col {
   width: 70%;
   float: right;
+}
+
+#assetList {
+  list-style-type: none;
+    height: 600px;
+    width: 100%;
+    -webkit-padding-start: 0px;
+    overflow-y: auto;
+    -webkit-app-region: no-drag;
+}
+
+#assetList-Charts {
+  list-style-type: none;
+    height: 120px;
+    width: 100%;
+    -webkit-padding-start: 0px;
+    overflow-y: auto;
+    -webkit-app-region: no-drag;
+}
+
+.btc-notice {
+  font-size: 15px;
+  color: #777;
 }
