--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -126,7 +126,7 @@
 }
 
 .dash-panel {
-  margin: 30px 0 0 0;
+  margin: 20px 0 0 0;
   width: auto;
   min-height: 360px;
   padding: 30px 30px 30px 30px;
@@ -285,7 +285,7 @@ h2 {
 }
 
 .send-notice {
-  margin: 30px auto 0px;
+  margin: 20px auto 0px;
   color: #646464;
   text-align: center;
   max-width: 640px;
@@ -351,6 +351,27 @@ ul {
 }
 
 #transactionList li:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+// BTC History
+
+#BTCtransactionList {
+  list-style-type: none;
+  height: 120px;
+  width: 100%;
+  -webkit-padding-start: 0px;
+  overflow-y: auto;
+  -webkit-app-region: no-drag;
+}
+
+#BTCtransactionList li {
+  padding: 10px 0px;
+  border-bottom: thin solid #222;
+  height: 40px;
+}
+
+#BTCtransactionList li:hover {
   background: rgba(0, 0, 0, 0.5);
 }
 
@@ -807,6 +828,14 @@ webview {
 
 .marg-right-5 {
   margin-right: 5px;
+}
+
+.marg-right-10 {
+  margin-right: 10px;
+}
+
+.marg-right-20 {
+  margin-right: 20px;
 }
 
 .font-16 {
@@ -1365,7 +1394,7 @@ margin: 0px;
 .qlink-price {color:#ae00d6; font-size: 0.8em; font-weight: 900;}
 .nex-price {color:#003fff; font-size: 0.8em; font-weight: 900;}
 .hp-price {color:#ffa6b6; font-size: 0.8em; font-weight: 900;}
-.btc-price {color:gold; font-size: 0.8em; font-weight: 900;}
+.btc-price {color:#ffaa00; font-size: 0.8em; font-weight: 900;}
 .ltc-price {color:silver; font-size: 0.8em; font-weight: 900;}
 .eth-price {color:grey; font-size: 0.8em; font-weight: 900;}
 .lrc-price {color:#646464; font-size: 0.8em; font-weight: 900;}
@@ -1541,7 +1570,7 @@ figure {
 .menu-accord {
   margin: 0px 0px 0px 0px;
   padding: 10px;
-  height: 120px;
+  font-size: 18px;
 }
 
 .menu-accord-li {
@@ -1551,7 +1580,7 @@ figure {
 .menu-accord-item {
   cursor: pointer;
   margin: 10px 0px 10px 58px;
-  font-size: 16px;
+  font-size: 18px;
   color: #999;
 }
 
