I have updated for litecoin11111.

--- a/app/styles/_buttons.scss
+++ b/app/styles/_buttons.scss
@@ -516,3 +516,22 @@
   padding-top: 12px;
   color: #646464;
 }
+
+//modal confirm button css
+.confirm_button {
+  background: #6fbcc5;
+  border-radius: 40px;
+  width: 100px;
+  height: 40px;
+  color: #000;
+  margin-top: 50px;
+}
+
+.cancel_button {
+  background: #959596;
+  border-radius: 40px;
+  width: 100px;
+  height: 40px;
+  color: #000;
+  margin-top: 50px;
+}
