--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1630,6 +1630,15 @@ a:focus, a:hover, a:active {
     -webkit-app-region: no-drag;
 }
 
+#assetList-ledger {
+  list-style-type: none;
+    height: 500px;
+    width: 100%;
+    -webkit-padding-start: 0px;
+    overflow-y: auto;
+    -webkit-app-region: no-drag;
+}
+
 #assetList-Charts {
   list-style-type: none;
     height: 120px;
