--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -126,7 +126,7 @@
 }
 
 .dash-panel {
-  margin: 30px 0 0 0;
+  margin: 20px 0 0 0;
   width: auto;
   min-height: 360px;
   padding: 30px 30px 30px 30px;
@@ -285,7 +285,7 @@ h2 {
 }
 
 .send-notice {
-  margin: 30px auto 0px;
+  margin: 20px auto 0px;
   color: #646464;
   text-align: center;
   max-width: 640px;
@@ -351,6 +351,27 @@ ul {
 }
 
 #transactionList li:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+// BTC History
+
+#BTCtransactionList {
+  list-style-type: none;
+  height: 120px;
+  width: 100%;
+  -webkit-padding-start: 0px;
+  overflow-y: auto;
+  -webkit-app-region: no-drag;
+}
+
+#BTCtransactionList li {
+  padding: 10px 0px;
+  border-bottom: thin solid #222;
+  height: 40px;
+}
+
+#BTCtransactionList li:hover {
   background: rgba(0, 0, 0, 0.5);
 }
 
@@ -809,8 +830,21 @@ webview {
   margin-right: 5px;
 }
 
+.marg-right-10 {
+  margin-right: 10px;
+  font-size: 24px;
+}
+
+.marg-right-20 {
+  margin-right: 20px;
+}
+
 .font-16 {
   font-size: 16px;
+}
+
+.font24 {
+    font-size: 24px;
 }
 
 .pointer {
@@ -1093,6 +1127,12 @@ webview {
       box-shadow: inset 0px 0px 12px #000000;
       cursor: pointer;
       -webkit-app-region: no-drag;
+      opacity: 0.85;
+}
+
+.col-3:hover {
+  opacity: 1;
+  border: 3px solid #272627;
 }
 
 .dotted {
@@ -1356,10 +1396,11 @@ margin: 0px;
 .gas-price {color:#9013fe; font-size: 0.8em; font-weight: 900;}
 .rpx-price {color:#980300; font-size: 0.8em; font-weight: 900;}
 .dbc-price {color:#5ac1d4; font-size: 0.8em; font-weight: 900;}
+.thor-price {color:#047ecd; font-size: 0.8em; font-weight: 900;}
 .qlink-price {color:#ae00d6; font-size: 0.8em; font-weight: 900;}
 .nex-price {color:#003fff; font-size: 0.8em; font-weight: 900;}
 .hp-price {color:#ffa6b6; font-size: 0.8em; font-weight: 900;}
-.btc-price {color:gold; font-size: 0.8em; font-weight: 900;}
+.btc-price {color:#ffaa00; font-size: 0.8em; font-weight: 900;}
 .ltc-price {color:silver; font-size: 0.8em; font-weight: 900;}
 .eth-price {color:grey; font-size: 0.8em; font-weight: 900;}
 .lrc-price {color:#646464; font-size: 0.8em; font-weight: 900;}
@@ -1535,7 +1576,7 @@ figure {
 .menu-accord {
   margin: 0px 0px 0px 0px;
   padding: 10px;
-  height: 120px;
+  font-size: 16px;
 }
 
 .menu-accord-li {
@@ -1583,6 +1624,15 @@ a:focus, a:hover, a:active {
 #assetList {
   list-style-type: none;
     height: 600px;
+    width: 100%;
+    -webkit-padding-start: 0px;
+    overflow-y: auto;
+    -webkit-app-region: no-drag;
+}
+
+#assetList-ledger {
+  list-style-type: none;
+    height: 500px;
     width: 100%;
     -webkit-padding-start: 0px;
     overflow-y: auto;
