--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1652,3 +1652,13 @@ a:focus, a:hover, a:active {
   font-size: 15px;
   color: #777;
 }
+
+
+.airdrop {
+  background: url("../img/airdrop.png") no-repeat center;
+  position: fixed;
+  top: 293px;
+right: 35px;
+width: 120px;
+height: 120px;
+}
