--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -261,7 +261,7 @@ box-shadow: inset 0px 0px 12px #000000;
   padding: 8px 25px;
   font-size: 18px;
   background-color: rgba(0, 0, 0, 0.62);
-  border: 1px solid #047ecd;
+  border: 1px solid #7f32bc;
   border-radius: 9px;
   outline: none;
 }
