Fixed many (upper/lower) case errors

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -609,7 +609,7 @@ $box-margin: 10px;
 @import "./newWallet.scss";
 @import "./savedWallet.scss";
 @import "./inputs.scss";
-@import "./_displayWalletKeys.scss";
+@import "./_displayWalletkeys.scss";
 @import "./_dashboard.scss";
 @import "./_navbar.scss";
 @import "./_receive.scss";
